--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 ###Chat System
-Implementation of distributed Chat room system with server and client implementations. 
+Implementation of distributed Chat room system with server and client class implementations. 
