--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-###Chat System
+## Chat System
 Implementation of distributed Chat room system with server and client class implementations. 
+
+
+# Dependancies:
+ - added simple-json 1.1.1 for marshalling/unmarshalling JSON requests for S2C and C2S interactions 
