--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 ## Chat System
 Implementation of distributed Chat room system with server and client class implementations. 
+System supports variety of C2S requests and responses, such as ability to make separate chat rooms, 
+change between rooms, change user id and so forth. 
 
 
 # Dependancies:
